--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
 <DIV id="make-narrow">
 <DIV id="toptitle">
 
-<H1>JiaYin(Emily) Liu&nbsp;(d\刘佳音)</H1></DIV>
-<P><img src ="./me.jpg" align ="right" style="width:170px;height:218px;">Senior Researcher</P>
-<P>Tencent Inc.<BR>Shenzhen, China</P>
+<H1>JiaYin(Emily) Liu&nbsp;(刘佳音)</H1></DIV>
+<P><img src ="./Emily.png" align ="right" style="width:170px;height:218px;">Senior Visual Designer</P>
+<P>ICCPP Inc.<BR>Shenzhen, China</P>
 <P>[<A href="https://scholar.google.com/citations?user=45HM9IgAAAAJ&hl=en">Google Scholar</A>] [<A href="https://github.com/yao8839836">Github</A>]  [<A href="./CV_dryao_en.pdf">CV (English)</A> | <A href="./CV_dryao.pdf">(中文)</A>] </P>
 <P><B>Email</B>: dryao [at] tencent.com</P>
 
