--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
 <H1>JiaYin(Emily) Liu&nbsp;(刘佳音)</H1></DIV>
 <P><img src ="./Emily.png" align ="right" style="width:170px;height:218px;">Senior Visual Designer</P>
 <P>ICCPP Inc.<BR>Shenzhen, China</P>
-<P>[<A href="https://scholar.google.com/citations?user=45HM9IgAAAAJ&hl=en">Google Scholar</A>] [<A href="https://github.com/yao8839836">Github</A>]  [<A href="./Emily-portfolio 24En.pdf">CV (English)</A> | <A href="./Emily-portfolio 24CN.pdf">(中文)</A>] </P>
+<P>[<A href="https://scholar.google.com/citations?user=45HM9IgAAAAJ&hl=en">Google Scholar</A>] [<A href="https://github.com/yao8839836">Github</A>]  [<A href="./Emily-portfolio 24En.pdf">Portfolio (English)</A> | <A href="./Emily-portfolio 24CN.pdf">(中文)</A>] </P>
 <P><B>Email</B>: 2925385649@qq.com</P>
 
 <H2>General</H2>
 <P> 
-  I am currently a senior researcher at Tencent. Before that, I was a Postdoc researcher at Northwestern University, working with Prof. Yuan Luo. In 2017, I got my Ph.D. degree from Zhejiang University. Before that, I received my B.E.degree from Sichuan University in 2012. My research interest is primarily in Artificial Intelligence, Natural Language Processing, and Data Mining. You can find me at dryao [AT] tencent.com or learn more about me with my [<A href="https://scholar.google.com/citations?user=45HM9IgAAAAJ&hl=en">Google Scholar</A>], [<A href="https://github.com/yao8839836">Github</A>], and [<A href="./CV_dryao_en.pdf">CV</A>].</P>
+  I have been engaged in visual design for 6 years,and have passionate about innovation, pursuing the balance between art and business.
+
+  Have rich design experience  in the FMCG industries, electronic products and cross-border e-commerce industries. I’m familiar with overseas markets (the United States, Europe, the United Arab Emirates, etc.) and have participated in the brand overseas project of  Alibaba's Southeast Asian e-commerce.
+  
+  I’m good at integrated brand visual construction—including VIS, website design, international exhibitions, packaging design, material extension, overseas social media, etc.</P>
 <!-- <P>His research interests include deep learning applied to natural language processing as well as programming languages. </P> -->
 <H2>Research Interests</H2>
 <P>Artificial Intelligence, Natural Language Processing, Data Mining, Medical Informatics.</P>
