--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
 <P><B>Email</B>: 2925385649@qq.com</P>
 
 <H2>General</H2>
-<P> 
-  I have been engaged in visual design for 6 years,and have passionate about innovation, pursuing the balance between art and business.
+<P> I have been engaged in visual design for 6 years,and have passionate about innovation, pursuing the balance between art and business.
 
   Have rich design experience  in the FMCG industries, electronic products and cross-border e-commerce industries. I’m familiar with overseas markets (the United States, Europe, the United Arab Emirates, etc.) and have participated in the brand overseas project of  Alibaba's Southeast Asian e-commerce.
   
   I’m good at integrated brand visual construction—including VIS, website design, international exhibitions, packaging design, material extension, overseas social media, etc.</P>
 <!-- <P>His research interests include deep learning applied to natural language processing as well as programming languages. </P> -->
-<H2>Research Interests</H2>
-<P>Artificial Intelligence, Natural Language Processing, Data Mining, Medical Informatics.</P>
+<H2>Education</H2>
+<P>2013.09-2017.06
+  Wuhan University of Technology - Ideology/bachelor
+  
+  2019.04-2021
+  Donghua University School of Continuing Education - Advanced Fashion Design </P>
 
  <!-- <H2><B>Internship Opportunity</B></H2>
 <P style="color:blue"> We are hiring research interns! If you are interested in large language models (LLM), feel free to contact me!</P> -->
