--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
 <H1>JiaYin(Emily) Liu&nbsp;(刘佳音)</H1></DIV>
 <P><img src ="./Emily.png" align ="right" style="width:170px;height:218px;">Senior Visual Designer</P>
 <P>ICCPP Inc.<BR>Shenzhen, China</P>
-<P>[<A href="https://scholar.google.com/citations?user=45HM9IgAAAAJ&hl=en">Google Scholar</A>] [<A href="https://github.com/yao8839836">Github</A>]  [<A href="./Emily-portfolio 24En.pdf">Portfolio (English)</A> | <A href="./Emily-portfolio 24CN.pdf">(中文)</A>] </P>
+<P> [<A href="./Emily-portfolio 24En.pdf">Portfolio (English)</A> | <A href="./Emily-portfolio 24CN.pdf">(中文)</A>] </P>
 <P><B>Email</B>: 2925385649@qq.com</P>
 
 <H2>General</H2>
@@ -25,11 +25,7 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
   I am good at integrated brand visual construction—including VIS, website design, international exhibitions, packaging design, material extension, overseas social media, etc.</P>
 <!-- <P>His research interests include deep learning applied to natural language processing as well as programming languages. </P> -->
 <H2>Education</H2>
-<P>2013.09-2017.06
-  Wuhan University of Technology - Ideology/bachelor
-  
-  2019.04-2021
-  Donghua University School of Continuing Education - Advanced Fashion Design </P>
+<P>2013.09-2017.06 <BR>Wuhan University of Technology - Ideology/bachelor <BR>2019.04-2021 <BR>Donghua University School of Continuing Education - Advanced Fashion Design</P>
 
  <!-- <H2><B>Internship Opportunity</B></H2>
 <P style="color:blue"> We are hiring research interns! If you are interested in large language models (LLM), feel free to contact me!</P> -->
