--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
   I am good at integrated brand visual construction—including VIS, website design, international exhibitions, packaging design, material extension, overseas social media, etc.</P>
 <!-- <P>His research interests include deep learning applied to natural language processing as well as programming languages. </P> -->
 <H2>Education</H2>
-<P>2013.09-2017.06 <BR>Wuhan University of Technology - Ideology/bachelor <BR>2019.04-2021 <BR>Donghua University School of Continuing Education - Advanced Fashion Design</P>
+<P>2013.09-2017.06  Wuhan University of Technology - Ideology/bachelor <BR>
+   2019.04-2021     Donghua University School of Continuing Education - Advanced Fashion Design</P>
 
  <!-- <H2><B>Internship Opportunity</B></H2>
 <P style="color:blue"> We are hiring research interns! If you are interested in large language models (LLM), feel free to contact me!</P> -->
