--- a/index.html
+++ b/index.html
@@ -36,13 +36,22 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
   <li>2019-09: joined Tencent as a Senior Researcher.</li>
 </ul> -->
 
-<H2>Selected Publications [<A href="https://scholar.google.com/citations?user=45HM9IgAAAAJ&hl=en">Full List</A>]</H2>
+<H2>Experiences</H2>
 <UL>
   <LI>
-  <P><B>Liang Yao</B>, Jiazhen Peng, Shenggong Ji, Qiang Liu, Hongyun Cai, Feng He, Xu Cheng.<BR>
-    Friend Ranking in Online Games via Pre-training Edge Transformers.<BR>
-    <I>Proceedings of the 46th International ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2023).</I><BR>
-    [<A href="https://dl.acm.org/doi/abs/10.1145/3539618.3591990">PDF</A>] [<A href="https://github.com/yao8839836/edge_mae">Code</A>]
+  <P><B>2022.09-2024.03</B>  ICCPP / Senior Visual Designer<BR>
+    1. Responsible for the visual control of the entire global business brand
+(1)Developn brand market positioning strategy 
+Conduct market research to confirm brand positioning and visual direction based on regional cultural characteristics, competitor research, consumer demographics, sales market feedback, etc.
+(2)Designed logo and developed brand VIS specification.
+(3)Product packaging design and specification development.
+Packaging design (developing design specifications for different countries, confirming packaging process according to product positioning and budget, etc.), flavor cards, store display design, etc.
+(4)Online Visual Design Output
+Including the design of website (UI/UX), KV, detail, event poster, social media account, product photography, etc.
+(5)International Exdhibition Material Design 
+Brand: ICEWAVE(US, UK),  VOOPOO(China), HTP - ZELES, ZELEX, J4U, GEELIQ, WOOLO, 造雾主(China)
+
+2. Responsible for group brand specification control and design.<BR>
    </P>
   </LI>
 </UL>
