--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
 <!-- <P>His research interests include deep learning applied to natural language processing as well as programming languages. </P> -->
 <H2>Education</H2>
 <P>2013.09-2017.06  Wuhan University of Technology - Ideology/bachelor <BR>
-   2019.04-2021     Donghua University School of Continuing Education - Advanced Fashion Design</P>
+   2019.04-2021 <BR> Donghua University School of Continuing Education - Advanced Fashion Design</P>
 
  <!-- <H2><B>Internship Opportunity</B></H2>
 <P style="color:blue"> We are hiring research interns! If you are interested in large language models (LLM), feel free to contact me!</P> -->
@@ -40,19 +40,18 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
 <UL>
   <LI>
   <P><B>2022.09-2024.03</B>  ICCPP / Senior Visual Designer<BR>
-    1. Responsible for the visual control of the entire global business brand
-(1)Developn brand market positioning strategy 
-Conduct market research to confirm brand positioning and visual direction based on regional cultural characteristics, competitor research, consumer demographics, sales market feedback, etc.
-(2)Designed logo and developed brand VIS specification.
-(3)Product packaging design and specification development.
-Packaging design (developing design specifications for different countries, confirming packaging process according to product positioning and budget, etc.), flavor cards, store display design, etc.
-(4)Online Visual Design Output
-Including the design of website (UI/UX), KV, detail, event poster, social media account, product photography, etc.
-(5)International Exdhibition Material Design 
-Brand: ICEWAVE(US, UK),  VOOPOO(China), HTP - ZELES, ZELEX, J4U, GEELIQ, WOOLO, 造雾主(China)
+    1. Responsible for the visual control of the entire global business brand<BR>
+(1)Developn brand market positioning strategy<BR>
+Conduct market research to confirm brand positioning and visual direction based on regional cultural characteristics, competitor research, consumer demographics, sales market feedback, etc.<BR>
+(2)Designed logo and developed brand VIS specification.<BR>
+(3)Product packaging design and specification development.<BR>
+Packaging design (developing design specifications for different countries, confirming packaging process according to product positioning and budget, etc.), flavor cards, store display design, etc.<BR>
+(4)Online Visual Design Output<BR>
+Including the design of website (UI/UX), KV, detail, event poster, social media account, product photography, etc.<BR>
+(5)International Exdhibition Material Design<BR>
+Brand: ICEWAVE(US, UK),  VOOPOO(China), HTP - ZELES, ZELEX, J4U, GEELIQ, WOOLO, 造雾主(China)<BR>
 
-2. Responsible for group brand specification control and design.<BR>
-   </P>
+2. Responsible for group brand specification control and design.</P>
   </LI>
 </UL>
 <UL>
