--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
   I am good at integrated brand visual construction—including VIS, website design, international exhibitions, packaging design, material extension, overseas social media, etc.</P>
 <!-- <P>His research interests include deep learning applied to natural language processing as well as programming languages. </P> -->
 <H2>Education</H2>
-<P>2013.09-2017.06<BR>  Wuhan University of Technology - Ideology/bachelor <BR>
+<P>2013.09-2017.06 <BR>  Wuhan University of Technology - Ideology/bachelor <BR>
    2019.04-2021<BR> Donghua University School of Continuing Education - Advanced Fashion Design</P>
 
  <!-- <H2><B>Internship Opportunity</B></H2>
@@ -56,11 +56,14 @@ Brand: ICEWAVE(US, UK),  VOOPOO(China), HTP - ZELES, ZELEX, J4U, GEELIQ, WOOLO, 
 </UL>
 <UL>
   <LI>
-  <P><B>Liang Yao</B>, Chengsheng Mao, Yuan Luo.<BR>
-    Graph Convolutional Networks for Text Classification.<BR>
-    <I>33rd AAAI Conference on Artificial Intelligence (AAAI-19).</I><BR>
-    [<A href="https://ojs.aaai.org/index.php/AAAI/article/view/4725">PDF</A>] [<A href="https://github.com/yao8839836/text_gcn">Code</A>]
-   </P>
+  <P><B>2021.04-2022.07</B>Lazada-Alibaba's flagship e-commerce platform in Southeast Asia / Visual Designer<BR>
+    1. Lazada CIS (Corporate Visualization System) Annual Overall Update<BR>
+Ensure that all visual outputs are in line with brand specifications and spread brand mind.including brand application system (promotional folders, easy-roll-ups, car stickers, holiday gifts), annual key visual, etc.<BR>
+2. Lazada Website Visual Design<BR>
+Design website banners and pages according to the visual preferences of different countries (China, Korea, Japan).<BR>
+3. Social Media Visual Design of Korea and Japan( Instagram、Twitter、Naver Blog)<BR>
+4. Overall visual output and control of large-scale investment activities<BR>
+5. Online Publicity Design(illustration, WeChat official account and video account) </P>
   </LI>
 </UL>
 <UL>
