--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
 <UL>
   <LI>
   <P><B>2022.09-2024.03  </B>  ICCPP / Senior Visual Designer<BR>
-    1. Responsible for the visual control of the entire global business brand<BR>
-(1)Developn brand market positioning strategy<BR>
+    1. Responsible for the visual control of the entire global business brand.<BR>
+(1)Develop brand market positioning strategy.<BR>
 Conduct market research to confirm brand positioning and visual direction based on regional cultural characteristics, competitor research, consumer demographics, sales market feedback, etc.<BR>
 (2)Designed logo and developed brand VIS specification.<BR>
 (3)Product packaging design and specification development.<BR>
@@ -56,72 +56,27 @@ Brand: ICEWAVE(US, UK),  VOOPOO(China), HTP - ZELES, ZELEX, J4U, GEELIQ, WOOLO, 
 </UL>
 <UL>
   <LI>
-  <P><B>2021.04-2022.07</B>Lazada-Alibaba's flagship e-commerce platform in Southeast Asia / Visual Designer<BR>
+  <P><B>2021.04-2022.07 </B>  Lazada-Alibaba's flagship e-commerce platform in Southeast Asia / Visual Designer<BR>
     1. Lazada CIS (Corporate Visualization System) Annual Overall Update<BR>
 Ensure that all visual outputs are in line with brand specifications and spread brand mind.including brand application system (promotional folders, easy-roll-ups, car stickers, holiday gifts), annual key visual, etc.<BR>
-2. Lazada Website Visual Design<BR>
+2. Lazada Website Visual Design.<BR>
 Design website banners and pages according to the visual preferences of different countries (China, Korea, Japan).<BR>
-3. Social Media Visual Design of Korea and Japan( Instagram、Twitter、Naver Blog)<BR>
+3. Social Media Visual Design of Korea and Japan( Instagram、Twitter、Naver Blog).<BR>
 4. Overall visual output and control of large-scale investment activities<BR>
 5. Online Publicity Design(illustration, WeChat official account and video account) </P>
   </LI>
 </UL>
 <UL>
   <LI>
-    <P><B>Liang Yao</B>.<BR>
-      Large Language Models are Contrastive Reasoners.<BR>
-    <I>arXiv preprint arXiv:2403.08211.</I><BR>
-    [<A href="https://arxiv.org/abs/2403.08211">PDF</A>] [<A href="https://github.com/yao8839836/cp">Code</A>]
-   </P>
+    <P><B>2020.04-2021.03</B>eBroker / Visual Designer </P>
   </LI>
 </UL>
 <UL>
   <LI>
-    <P><B>Liang Yao</B>, Jiazhen Peng, Chengsheng Mao, Yuan Luo.<BR>
-      Exploring Large Language Models for Knowledge Graph Completion.<BR>
-    <I>arXiv preprint arXiv:2308.13916.</I><BR>
-    [<A href="https://arxiv.org/abs/2308.13916">PDF</A>] [<A href="https://github.com/yao8839836/kg-llm">Code</A>]
-   </P>
+    <P><B>2018.04-2020.03</B>Citibank Financial Information Services (China) Co., Ltd  / Graphic Designer 
+    </P>
   </LI>
 </UL>
-<UL>
-  <LI>
-    <P><B>Liang Yao</B>, Chengsheng Mao, Yuan Luo.<BR>
-      KG-BERT: BERT for Knowledge Graph Completion.<BR>
-    <I>arXiv preprint arXiv:1909.03193.</I><BR>
-    [<A href="https://arxiv.org/abs/1909.03193">PDF</A>] [<A href="https://github.com/yao8839836/kg-bert">Code</A>]
-   </P>
-  </LI>
-</UL>
-<UL>
-  <LI>
-    <P><B>Liang Yao</B>, Zhe Jin, Chengsheng Mao, Yin Zhang, Yuan Luo.<BR>
-    Traditional Chinese medicine clinical records classification with BERT and domain specific corpora.<BR>
-    <I>Journal of the American Medical Informatics Association (JAMIA).</I> Volume 26, Issue 12, December 2019, Pages 1632–1636<BR>
-    [<A href="https://academic.oup.com/jamia/article-abstract/26/12/1632/5573314">PDF</A>] [<A href="https://github.com/yao8839836/tcm_bert">Data & Code</A>]
-   </P>
-  </LI>
-</UL>
- <UL>
-  <LI>
-  <P><B>Liang Yao</B>, Yin Zhang, Baogang Wei, Wenjin Zhang, Zhe Jin.<BR>
-    A Topic Modeling Approach for Traditional Chinese Medicine Prescriptions.<BR>
-    <I>IEEE Transactions on Knowledge and Data Engineering (TKDE).</I>  Volume: 30, Issue: 6, 01 June 2018)<BR>
-    [<A href="https://ieeexplore.ieee.org/abstract/document/8242679">PDF</A>] [<A href="https://github.com/yao8839836/PTM">Data & Code</A>]
-   </P>
-  </LI>
-</UL>
-   
-<UL>
-  <LI>
-    <P><B>Liang Yao</B>, Yin Zhang, Baogang Wei, Zhe Jin, Rui Zhang, Yangyang Zhang, Qinfei Chen.<BR>
-    Incorporating Knowledge Graph Embeddings into Topic Modeling.<BR>
-    <I>31st AAAI Conference on Artificial Intelligence (AAAI-17).</I><BR>
-    [<A href="https://ojs.aaai.org/index.php/AAAI/article/view/10951">PDF</A>] [<A href="https://github.com/yao8839836/KGE-LDA">Code</A>]
-   </P>
-  </LI>
-</UL>
-
 
 <H2>Academic Services</H2>
 <ul>
