--- a/index.html
+++ b/index.html
@@ -78,58 +78,12 @@ Design website banners and pages according to the visual preferences of differen
   </LI>
 </UL>
 
-<H2>Academic Services</H2>
+<H2>project</H2>
 <ul>
-  <li><B>Conference PC Member/Reviewer</B>: AAAI, IJCAI, NeurIPS, ICLR, ACL, EMNLP, KDD, ECML-PKDD. </li>
-  <li><B>Journal Reviewer</B>: TKDE, Neural Networks, ACM Computing Surveys, JBI, etc.</li>
+  <li><B>2023.06-2024.03 </B>Disposable Electronic Cigarette Planning(US) / ICEWAVE   </li>
+  <li><B>2022.02-2022.06 </B>Chinese Brands Going Global / Lazada </li>
 </ul>
 
-<H2>Selected Awards</H2>
-    <div style="overflow:hidden;margin-bottom: 0.6em">
-     <div style="float:left;">AI 2000 Most Influential Scholar Award Honorable Mention </div>
-     <div style="float:right;">2022-2023</div>
-    </div>
-
-    <div style="overflow:hidden;margin-bottom: 0.6em">
-     <div style="float:left;">World’s Top 2% Scientists.</div>
-     <div style="float:right;">2022-2023</div>
-    </div>
-
-    <div style="overflow:hidden;margin-bottom: 0.6em">
-      <div style="float:left;">No.1 in OpenBookQA Leaderboard</div>
-      <div style="float:right;">2023</div>
-     </div>
-
-    <div style="overflow:hidden;margin-bottom: 0.6em">
-      <div style="float:left;">No.1 in OGB ogbl-wikikg2 challenge</div>
-      <div style="float:right;">2023</div>
-     </div>
-
-    <div style="overflow:hidden;margin-bottom: 0.6em">
-     <div style="float:left;">No.1 in OGB ogbl-collab challenge</div>
-     <div style="float:right;">2022</div>
-    </div>
-
-    <div style="overflow:hidden;margin-bottom: 0.6em">
-     <div style="float:left;">Outstanding Contributor of Tencent</div>
-     <div style="float:right;">2022</div>
-    </div>
-	
-    
-    <div style="overflow:hidden;margin-bottom: 0.6em">
-     <div style="float:left;">Overseas High-Caliber Personnel in Shenzhen</div>
-     <div style="float:right;">2020</div>
-    </div>
-
-    <div style="overflow:hidden;margin-bottom: 0.6em">
-     <div style="float:left;">Excellent Graduate Student of Zhejiang University</div>
-     <div style="float:right;">2013, 2015, 2016</div>
-    </div>
-
-    <div style="overflow:hidden;margin-bottom: 0.6em">
-     <div style="float:left;">Outstanding Student of Sichuan University</div>
-     <div style="float:right;">2009</div>
-    </div>
 
 
 <!-- <H2>Teaching Assistant</H2>
