--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
 
 <H1>JiaYin(Emily) Liu&nbsp;(刘佳音)</H1></DIV>
 <P><img src ="./Emily.png" align ="right" style="width:170px;height:218px;">Senior Visual Designer</P>
-<P>ICCPP Inc.<BR>Shenzhen, China</P>
+<P>Shenzhen, China</P>
 <P> [<A href="./Emily-portfolio 24En.pdf">Portfolio (English)</A> | <A href="./Emily-portfolio 24CN.pdf">(中文)</A>] </P>
 <P><B>Email</B>: 2925385649@qq.com</P>
 
