--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
 <P><img src ="./Emily.png" align ="right" style="width:170px;height:218px;">Senior Visual Designer</P>
 <P>Shenzhen, China</P>
 <P> [<A href="./Emily-portfolio 24En.pdf">Portfolio (English)</A> | <A href="./Emily-portfolio 24CN.pdf">(中文)</A>] </P>
-<P><B>Email</B>: 2925385649@qq.com</P>
+<P><B>Email</B>: 2925385649@qq.com        Phone</B>: +86 19520608203 </P>
 
 <H2>General</H2>
 <P> I have been engaged in visual design for 6 years,and have passionate about innovation, pursuing the balance between art and business.
