--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ rel="stylesheet" type="text/css"> <TITLE>Dr. Liang Yao</TITLE> </HEAD>
 <P>Shenzhen, China</P>
 <P> [<A href="./Emily-portfolio 24En.pdf">Portfolio (English)</A> | <A href="./Emily-portfolio 24CN.pdf">(中文)</A>] </P>
 <P><B>Email</B>: 2925385649@qq.com <BR>     
-      Phone</B>: +86 19520608203 </P>
+   <B>Phone</B>: +86 19520608203 </P>
 
 <H2>General</H2>
 <P> I have been engaged in visual design for 6 years,and have passionate about innovation, pursuing the balance between art and business.
