--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ rel="stylesheet" type="text/css"> <TITLE>Emily.Liu</TITLE> </HEAD>
    <B>Phone</B>: +86 19520608203 </P>
 
 <H2>General</H2>
-<P> I have been engaged in visual design for 6 years,and have passionate about innovation, pursuing the balance between art and business.
+<P> I have been engaged in visual design for 6 years, and have passionate about innovation, pursuing the balance between art and business.
 
-  Have rich design experience  in the FMCG industries, electronic products and cross-border e-commerce industries. I am familiar with overseas markets (the United States, Europe, the United Arab Emirates, etc.) and have participated in the brand overseas project of  Alibaba's Southeast Asian e-commerce.
+  Have rich design experience in the FMCG industries, electronic products and cross-border e-commerce industries. I am familiar with overseas markets (the United States, Europe, the United Arab Emirates, etc.) and have participated in the brand overseas project of  Alibaba's Southeast Asian e-commerce.
   
   I am good at integrated brand visual construction—including VIS, website design, international exhibitions, packaging design, material extension, overseas social media, etc.</P>
 <!-- <P>His research interests include deep learning applied to natural language processing as well as programming languages. </P> -->
@@ -93,6 +93,6 @@ Design website banners and pages according to the visual preferences of differen
 -->
 
 
-<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fyao8839836.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
+<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Femily-liu011.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
 
 </DIV></DIV></BODY></HTML>
