--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ rel="stylesheet" type="text/css"> <TITLE>Emily.Liu</TITLE> </HEAD>
 <DIV id="toptitle">
 
 <H1>JiaYin(Emily) Liu&nbsp;(刘佳音)</H1></DIV>
-<P><img src ="./Emily.png" align ="right" style="width:170px;height:218px;">Senior Visual Designer</P>
+<P><img src ="./emily-11.jpg" align ="right" style="width:170px;height:218px;">Senior Visual Designer</P>
 <P>Shenzhen, China</P>
 <P> [<A href="./Emily-portfolio 24En.pdf">Portfolio (English)</A> | <A href="./Emily-portfolio 24CN.pdf">(中文)</A>] </P>
 <P><B>Email</B>: 2925385649@qq.com <BR>     
